# proyecto_poo2

./: CMakeLists.txt  Casilla.cpp  Casilla.h  Grid.cpp  Grid.h  Librerias.h  README.md  Ventana.cpp  Ventana.h  main.cpp
